# covad

./: .gitignore  README.md  concept_intervention.py  concepts visualization.ipynb  concepts.ipynb  dataset_creation.ipynb  dataset_querying.py  dataset_utils.py  environment.yml  hyperparam_opt.py  list_creation.py  llm_trial.py  main.py  main.sh  metrics.py  mvtec_concept_dataset  pyproject.toml  trainer.py
datasets/: concept_dataset.py  iad_dataset.py  mvtec_concept_dataset.py  mvtec_dataset.py  realiad_dataset.py
evaluators/: evaluator_cbm.py  evaluator_stfpm.py  evaluator_unified.py
main_scripts/: cbm.py  combined_branches.py  combined_branches_modified.py  concept_evaluation.py  data_annotation.py  intervention.py  intervention_bar_plot.py  intervention_line_plot.py  main_concept_evaluation.py  main_intervention.py  main_models.py  main_stfpm.py  parallel_experiments.py  plot_intervention_perc.py  run_intervention_mvtec.py  run_intervention_visa.py  run_unified_all.sh  run_unified_mvtec.sh  stfpm.py  unified.py  visualize_unified.py
main_unified/: compare_ablation.py  evaluator_unified.py  handoff_review.md  journal.md  models_unified.py  run_unified_all.sh  run_unified_mvtec.sh  run_unified_pp.sh  run_unified_pp_all.sh  run_unified_ppmasked.sh  run_unified_ppmasked_all.sh  trainer_unified.py  unified.py  visualize_unified.py
models/: final_models.py  full_models.py  model_backbones.py  resnet_18.py
notebooks/: concept_vis_alternative.ipynb  concepts visualization.ipynb
trainers/: resnet_trainer.py  trainer_cbm.py  trainer_stfpm.py  trainer_unified.py
(+9 files in other folders)
